Add related types output
